# BitLockerTool

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
_cmake/: CPM.cmake  ProjectOptions.cmake  ProjectWarnings.cmake
misc/: Mount.bat  Mount.txt  Unmount.bat  Unmount.txt
src/: BitLockerTool.cpp  Command.cpp  Command.hpp  Common.hpp  DiskPart.cpp  DiskPart.hpp  Unit.hpp
